force-app/main/default/objects/slackv2__Subscription_Object__c/fields/slackv2__Custom__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Custom__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>