force-app/main/default/objects/slackv2__Subscription_Object__c/fields/slackv2__Detail__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detail</label>
    <type>Checkbox</type>
</CustomField>