force-app/main/default/objects/slackv2__Subscription_Object__c/fields/slackv2__Displayed_Fields__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Displayed_Fields__c</fullName>
    <label>Displayed Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>